@@ -1,3 +1,8 @@
+2009-01-11  George Peter Staplin  <georgeps@users.sourceforge.net>
+
+	* generic/tkEvent.c: Backport a fix from 8.6 for a NULL pointer
+	dereference in CreateXIC.
+
 2009-01-07  Pat Thoyts  <patthoyts@users.sourceforge.net>
 
 	* win/tkWinWm.c: Backported fix for [Bug 1847002] to prevent the
